After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 687057 - vorbistag: fix memory leak
vorbistag: fix memory leak
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
git master
Other Linux
: Normal normal
: 1.0.3
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-10-28 19:05 UTC by Miguel Angel Cabrera Moya
Modified: 2012-10-28 20:23 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
proposed fix (868 bytes, patch)
2012-10-28 19:06 UTC, Miguel Angel Cabrera Moya
committed Details | Review

Description Miguel Angel Cabrera Moya 2012-10-28 19:05:49 UTC
Just an small memory leak
Comment 1 Miguel Angel Cabrera Moya 2012-10-28 19:06:07 UTC
Created attachment 227471 [details] [review]
proposed fix
Comment 2 Tim-Philipp Müller 2012-10-28 20:23:41 UTC
Thanks!

commit 51c4e51d9c3895b669e8bcfdba238aa6dc1dbad1
Author: Miguel Angel Cabrera Moya <madmac2501@gmail.com>
Date:   Sun Oct 28 20:01:17 2012 +0100

    vorbistag: fix memory leak
    
    https://bugzilla.gnome.org/show_bug.cgi?id=687057