vorbistag: fix memory leak

https://bugzilla.gnome.org/show_bug.cgi?id=687057